[gd_scene load_steps=34 format=2]

[ext_resource path="res://Assets/CorrectSound.wav" type="AudioStream" id=1]
[ext_resource path="res://Assets/yesbutton.png" type="Texture" id=2]
[ext_resource path="res://Assets/WrongSound.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/blankcard.png" type="Texture" id=4]
[ext_resource path="res://Hack_Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://FastMatchGame.gd" type="Script" id=6]
[ext_resource path="res://Assets/nobutton.png" type="Texture" id=7]
[ext_resource path="res://Assets/CountSound.wav" type="AudioStream" id=8]

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.764706, 0.862745, 0.858824, 0.960784 )
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="DynamicFont" id=1]
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.764706, 0.862745, 0.858824, 0.960784 )
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="DynamicFont" id=2]
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=10]
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.764706, 0.862745, 0.858824, 0.960784 )
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="DynamicFont" id=3]
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=14]
size = 20
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.203922, 0.45098, 0.443137, 0.901961 )
corner_radius_top_right = 2
corner_radius_bottom_right = 2

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.184314, 0.258824, 0.333333, 0.901961 )
corner_radius_top_right = 2
corner_radius_bottom_right = 2
shadow_size = 1

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.203922, 0.45098, 0.443137, 0.901961 )
corner_radius_top_left = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.184314, 0.258824, 0.333333, 0.901961 )
corner_radius_top_left = 2
corner_radius_bottom_left = 2
shadow_size = 1

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.541176, 0.25098, 0.54902, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.133333, 0.0823529, 0.101961, 1 )
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="DynamicFont" id=4]
size = 30
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=11]
size = 18
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.282353, 0.611765, 0.266667, 1 )
border_width_left = 1
border_width_right = 1
border_width_bottom = 1
border_blend = true
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.164706, 0.54902, 0.576471, 1 )
border_width_left = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.313726, 0.545098, 0.345098, 0.941176 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.85098, 0.854902, 0.4, 1 )
border_blend = true
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18

[sub_resource type="DynamicFont" id=15]
size = 30
outline_size = 1
outline_color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
font_data = ExtResource( 5 )

[node name="FastMatchGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0901961, 0.184314, 0.137255, 1 )

[node name="HUD" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -360.0
margin_bottom = 32.0
rect_min_size = Vector2( 256, 0 )
alignment = 2

[node name="Time" type="Panel" parent="HUD"]
margin_right = 120.0
margin_bottom = 32.0
rect_min_size = Vector2( 120, 0 )
custom_styles/panel = SubResource( 18 )

[node name="Fixed" type="Label" parent="HUD/Time"]
anchor_bottom = 1.0
margin_right = 56.0
rect_min_size = Vector2( 40, 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Time:"
valign = 1

[node name="Dynamic" type="Label" parent="HUD/Time"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -48.0
rect_min_size = Vector2( 40, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "time"
align = 2
valign = 1

[node name="Score" type="Panel" parent="HUD"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 32.0
rect_min_size = Vector2( 120, 0 )
custom_styles/panel = SubResource( 19 )

[node name="Fixed" type="Label" parent="HUD/Score"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -16.0
margin_right = 60.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Score:"
valign = 1

[node name="Dynamic" type="Label" parent="HUD/Score"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -16.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "points"
align = 2
valign = 1

[node name="Streak" type="Panel" parent="HUD"]
margin_left = 248.0
margin_right = 360.0
margin_bottom = 32.0
rect_min_size = Vector2( 112, 0 )
custom_styles/panel = SubResource( 20 )

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Streak"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Counters" type="HBoxContainer" parent="HUD/Streak/VBoxContainer"]
margin_top = 6.0
margin_right = 112.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 16 )
custom_constants/separation = 3
alignment = 1

[node name="Streak1" type="Panel" parent="HUD/Streak/VBoxContainer/Counters"]
self_modulate = Color( 0.196078, 0.196078, 0.196078, 0.870588 )
margin_left = 4.0
margin_right = 20.0
margin_bottom = 19.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 21 )

[node name="Streak2" type="Panel" parent="HUD/Streak/VBoxContainer/Counters"]
self_modulate = Color( 0.196078, 0.196078, 0.196078, 0.870588 )
margin_left = 23.0
margin_right = 39.0
margin_bottom = 19.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 22 )

[node name="Streak3" type="Panel" parent="HUD/Streak/VBoxContainer/Counters"]
self_modulate = Color( 0.196078, 0.196078, 0.196078, 0.870588 )
margin_left = 42.0
margin_right = 58.0
margin_bottom = 19.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 23 )

[node name="Streak4" type="Panel" parent="HUD/Streak/VBoxContainer/Counters"]
self_modulate = Color( 0.196078, 0.196078, 0.196078, 0.870588 )
margin_left = 61.0
margin_right = 77.0
margin_bottom = 19.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 24 )

[node name="ColorRect" type="ColorRect" parent="HUD/Streak/VBoxContainer/Counters"]
margin_left = 80.0
margin_right = 84.0
margin_bottom = 19.0
rect_min_size = Vector2( 4, 16 )
color = Color( 1, 1, 1, 0 )

[node name="Dynamic" type="Label" parent="HUD/Streak/VBoxContainer/Counters"]
margin_left = 87.0
margin_right = 107.0
margin_bottom = 19.0
rect_min_size = Vector2( 0, 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "x1"
align = 2
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -160.0
margin_right = 176.0
margin_bottom = 96.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 20.0
margin_right = 352.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 56 )
custom_fonts/font = SubResource( 14 )
text = "Does the symbol on the card match the previous one?"
align = 1
autowrap = true

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 352.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 16 )
color = Color( 1, 1, 1, 0 )

[node name="CardPiles" type="HBoxContainer" parent="VBoxContainer"]
modulate = Color( 1.5, 1.1, 1.1, 1 )
margin_top = 100.0
margin_right = 352.0
margin_bottom = 236.0
custom_constants/separation = 20
alignment = 1

[node name="CardBack" type="TextureRect" parent="VBoxContainer/CardPiles"]
modulate = Color( 0.0784314, 0.14902, 0.380392, 1 )
margin_left = 30.0
margin_right = 166.0
margin_bottom = 136.0
rect_min_size = Vector2( 136, 136 )
texture = ExtResource( 4 )
expand = true

[node name="Shadow" type="TextureRect" parent="VBoxContainer/CardPiles/CardBack"]
self_modulate = Color( 0.0352941, 0.0352941, 0.0352941, 0.807843 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.0
margin_top = -67.0
margin_right = 71.0
margin_bottom = 71.0
texture = ExtResource( 4 )
expand = true

[node name="Card" type="TextureRect" parent="VBoxContainer/CardPiles"]
margin_left = 186.0
margin_right = 322.0
margin_bottom = 136.0
rect_min_size = Vector2( 136, 136 )
texture = ExtResource( 4 )
expand = true

[node name="Shadow2" type="TextureRect" parent="VBoxContainer/CardPiles/Card"]
self_modulate = Color( 0.0352941, 0.0352941, 0.0352941, 0.72549 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.0
margin_top = -67.0
margin_right = 71.0
margin_bottom = 71.0
texture = ExtResource( 4 )
expand = true

[node name="UI" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 128, 0 )
custom_constants/separation = 8
alignment = 1

[node name="NoButton" type="Button" parent="UI"]
margin_right = 64.0
margin_bottom = 40.0
rect_min_size = Vector2( 64, 40 )
custom_styles/hover = SubResource( 25 )
custom_styles/normal = SubResource( 6 )
text = "No"
icon = ExtResource( 7 )
align = 0
expand_icon = true

[node name="YesButton" type="Button" parent="UI"]
margin_left = 72.0
margin_right = 136.0
margin_bottom = 40.0
rect_min_size = Vector2( 64, 40 )
custom_styles/hover = SubResource( 26 )
custom_styles/normal = SubResource( 7 )
text = "Yes"
icon = ExtResource( 2 )
align = 2
icon_align = 2
expand_icon = true

[node name="Timer" type="Timer" parent="."]
wait_time = 45.0
one_shot = true

[node name="PopupDialog" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.0
margin_top = -96.0
margin_right = 161.0
margin_bottom = 96.0
custom_styles/panel = SubResource( 5 )
popup_exclusive = true

[node name="VBoxContainer" type="VBoxContainer" parent="PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -87.5
margin_right = 160.0
margin_bottom = 87.5
alignment = 1

[node name="Label" type="Label" parent="PopupDialog/VBoxContainer"]
margin_top = 33.0
margin_right = 320.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 4 )
text = "Time's Up!"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="PopupDialog/VBoxContainer"]
margin_top = 73.0
margin_right = 320.0
margin_bottom = 105.0
rect_min_size = Vector2( 0, 32 )
color = Color( 1, 1, 1, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="PopupDialog/VBoxContainer"]
margin_top = 109.0
margin_right = 320.0
margin_bottom = 141.0
alignment = 1

[node name="RestartButton" type="Button" parent="PopupDialog/VBoxContainer/HBoxContainer"]
margin_left = 116.0
margin_right = 204.0
margin_bottom = 32.0
rect_min_size = Vector2( 88, 32 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 13 )
custom_styles/focus = SubResource( 17 )
custom_styles/normal = SubResource( 12 )
text = "Restart"
expand_icon = true

[node name="CorrectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="CountSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
pitch_scale = 0.9

[node name="WrongSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Countdown" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0
custom_styles/panel = SubResource( 16 )
popup_exclusive = true

[node name="Label" type="Label" parent="Countdown"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
custom_fonts/font = SubResource( 15 )
text = "3"
align = 1
valign = 1

[connection signal="pressed" from="UI/NoButton" to="." method="_on_NoButton_pressed"]
[connection signal="pressed" from="UI/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="PopupDialog/VBoxContainer/HBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
